@@ -627,7 +627,8 @@
 		// clone button
 		jQuery('#clone').click(function() {
 			jQuery('#actionid, #delete, #clone').remove();
-			jQuery('#update').val(<?php echo CJs::encodeJson(_('Add')); ?>).attr({id: 'add', name: 'add'});
+			jQuery('#update').button('option', 'label', <?php echo CJs::encodeJson(_('Add')); ?>)
+				.attr({id: 'add', name: 'add'});
 
 			var operationIdNameRegex = /operations\[\d+\]\[operationid\]/;
 			jQuery('input[name^=operations]').each(function() {
